[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-graphqlmap"
version = "0.1.0"
description = "Analyze GraphQL introspection for risky fields, depth, and authz gaps"
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["cognis-digital", "cognis-neural-suite", "secops", "graphqlmap"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/graphqlmap"

[project.scripts]
graphqlmap = "graphqlmap.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["graphqlmap"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F"]
# E501 is suppressed because the HTML-generation strings in cli.py are intentionally
# long and splitting them would reduce readability without any safety benefit.
ignore = ["E501"]
